se realiza correccion que se sugieren